{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 1349,
  "lineage": "7fa955ee-a396-6b3c-d4b3-c70164029704",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "pubroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:route-table/rtb-048dbf5a95c7953a0",
            "default_route_table_id": "rtb-048dbf5a95c7953a0",
            "id": "rtb-048dbf5a95c7953a0",
            "owner_id": "988940651769",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cebe89e41b0fa216",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tfpubrt"
            },
            "tags_all": {
              "Name": "tfpubrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00516ebb90a2b27be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.intgw",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "awsec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098e42ae54c764c35",
            "arn": "arn:aws:ec2:us-west-2:988940651769:instance/i-0b37d46ed22abebb2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b37d46ed22abebb2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tfAWS-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04709abf0ceca0692",
            "private_dns": "ip-11-0-0-69.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.0.69",
            "public_dns": "ec2-52-89-80-42.us-west-2.compute.amazonaws.com",
            "public_ip": "52.89.80.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-078a8069571b7047f",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb055ea18807058d",
            "tags": {
              "Name": "Web-0"
            },
            "tags_all": {
              "Name": "Web-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0120e0a0ec5778b32",
              "sg-062594dcd212b0aad"
            ]
          },
          "dependencies": [
            "aws_key_pair.publickey",
            "aws_security_group.remotesg",
            "aws_security_group.web",
            "aws_subnet.pubsub",
            "aws_vpc.vpc1",
            "data.template_file.user_data_linux",
            "tls_private_key.keypair"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098e42ae54c764c35",
            "arn": "arn:aws:ec2:us-west-2:988940651769:instance/i-063664cc367712310",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063664cc367712310",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tfAWS-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cbadd97e8b0e74bb",
            "private_dns": "ip-11-0-1-40.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.40",
            "public_dns": "ec2-35-91-128-69.us-west-2.compute.amazonaws.com",
            "public_ip": "35.91.128.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bcac3763b1cc2eaa",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0850a677d56d6fcc3",
            "tags": {
              "Name": "Web-1"
            },
            "tags_all": {
              "Name": "Web-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0120e0a0ec5778b32",
              "sg-062594dcd212b0aad"
            ]
          },
          "dependencies": [
            "aws_key_pair.publickey",
            "aws_security_group.remotesg",
            "aws_security_group.web",
            "aws_subnet.pubsub",
            "aws_vpc.vpc1",
            "data.template_file.user_data_linux",
            "tls_private_key.keypair"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098e42ae54c764c35",
            "arn": "arn:aws:ec2:us-west-2:988940651769:instance/i-091d56f64faa6c465",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-091d56f64faa6c465",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tfAWS-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0857e44f35a1a9b43",
            "private_dns": "ip-11-0-2-140.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.2.140",
            "public_dns": "ec2-54-201-180-132.us-west-2.compute.amazonaws.com",
            "public_ip": "54.201.180.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09022a44b6eb45c76",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-000d2bedf0aa0fbd3",
            "tags": {
              "Name": "Web-2"
            },
            "tags_all": {
              "Name": "Web-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0120e0a0ec5778b32",
              "sg-062594dcd212b0aad"
            ]
          },
          "dependencies": [
            "aws_key_pair.publickey",
            "aws_security_group.remotesg",
            "aws_security_group.web",
            "aws_subnet.pubsub",
            "aws_vpc.vpc1",
            "data.template_file.user_data_linux",
            "tls_private_key.keypair"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098e42ae54c764c35",
            "arn": "arn:aws:ec2:us-west-2:988940651769:instance/i-0b6adc392735387c9",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b6adc392735387c9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tfAWS-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0371a8cdfbb9dee2c",
            "private_dns": "ip-11-0-3-38.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.3.38",
            "public_dns": "ec2-34-223-65-25.us-west-2.compute.amazonaws.com",
            "public_ip": "34.223.65.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08f4961c5aa945311",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0067373b476d07909",
            "tags": {
              "Name": "Web-3"
            },
            "tags_all": {
              "Name": "Web-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0120e0a0ec5778b32",
              "sg-062594dcd212b0aad"
            ]
          },
          "dependencies": [
            "aws_key_pair.publickey",
            "aws_security_group.remotesg",
            "aws_security_group.web",
            "aws_subnet.pubsub",
            "aws_vpc.vpc1",
            "data.template_file.user_data_linux",
            "tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "intgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:internet-gateway/igw-0cebe89e41b0fa216",
            "id": "igw-0cebe89e41b0fa216",
            "owner_id": "988940651769",
            "tags": {
              "Name": "tfintgw"
            },
            "tags_all": {
              "Name": "tfintgw"
            },
            "vpc_id": "vpc-00516ebb90a2b27be"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02843fda24c1bf7d8",
            "route_table_id": "rtb-048dbf5a95c7953a0",
            "subnet_id": "subnet-0fb055ea18807058d"
          },
          "dependencies": [
            "aws_default_route_table.pubroute",
            "aws_internet_gateway.intgw",
            "aws_subnet.pubsub",
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c73592d7e23acef4",
            "route_table_id": "rtb-048dbf5a95c7953a0",
            "subnet_id": "subnet-0850a677d56d6fcc3"
          },
          "dependencies": [
            "aws_default_route_table.pubroute",
            "aws_internet_gateway.intgw",
            "aws_subnet.pubsub",
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d09200d8bcf6d3d",
            "route_table_id": "rtb-048dbf5a95c7953a0",
            "subnet_id": "subnet-000d2bedf0aa0fbd3"
          },
          "dependencies": [
            "aws_default_route_table.pubroute",
            "aws_internet_gateway.intgw",
            "aws_subnet.pubsub",
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079d4b933f7172327",
            "route_table_id": "rtb-048dbf5a95c7953a0",
            "subnet_id": "subnet-0067373b476d07909"
          },
          "dependencies": [
            "aws_default_route_table.pubroute",
            "aws_internet_gateway.intgw",
            "aws_subnet.pubsub",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "remotesg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:security-group/sg-0120e0a0ec5778b32",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0120e0a0ec5778b32",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf_remotesg",
            "name_prefix": "",
            "owner_id": "988940651769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf_remotesg"
            },
            "tags_all": {
              "Name": "tf_remotesg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00516ebb90a2b27be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:security-group/sg-062594dcd212b0aad",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-062594dcd212b0aad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf_websg",
            "name_prefix": "",
            "owner_id": "988940651769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf_websg"
            },
            "tags_all": {
              "Name": "tf_websg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00516ebb90a2b27be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:subnet/subnet-0fb055ea18807058d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "11.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb055ea18807058d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "988940651769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PubSubnet-0"
            },
            "tags_all": {
              "Name": "PubSubnet-0"
            },
            "vpc_id": "vpc-00516ebb90a2b27be"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:subnet/subnet-0850a677d56d6fcc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0850a677d56d6fcc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "988940651769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PubSubnet-1"
            },
            "tags_all": {
              "Name": "PubSubnet-1"
            },
            "vpc_id": "vpc-00516ebb90a2b27be"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:subnet/subnet-000d2bedf0aa0fbd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000d2bedf0aa0fbd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "988940651769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PubSubnet-2"
            },
            "tags_all": {
              "Name": "PubSubnet-2"
            },
            "vpc_id": "vpc-00516ebb90a2b27be"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:subnet/subnet-0067373b476d07909",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0067373b476d07909",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "988940651769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PubSubnet-3"
            },
            "tags_all": {
              "Name": "PubSubnet-3"
            },
            "vpc_id": "vpc-00516ebb90a2b27be"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:vpc/vpc-00516ebb90a2b27be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0c693a69f7dd9c014",
            "default_route_table_id": "rtb-048dbf5a95c7953a0",
            "default_security_group_id": "sg-0b007b81e9eb409b2",
            "dhcp_options_id": "dopt-01ff4d1ca34167ea2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00516ebb90a2b27be",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048dbf5a95c7953a0",
            "owner_id": "988940651769",
            "tags": {
              "Name": "tfvpc"
            },
            "tags_all": {
              "Name": "tfvpc"
            }
          }
        }
      ]
    }
  ]
}